fixed banner padding on mobile with inline css

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -981,9 +981,8 @@ ol.default {
   }
 
   p {
+    border: 10px solid black;
     text-transform: uppercase;
-    color: #fff;
-    color: rgba(255, 255, 255, 0.75);
     font-size: 1.5em;
     font-weight: 700;
     line-height: 1.3em;
